--- a/package.json
+++ b/package.json
@@ -48,9 +48,9 @@
     "country-state-city": "^3.2.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "html2canvas-pro": "^1.5.13",
     "immer": "^10.1.1",
     "jspdf": "^3.0.4",
-    "html2canvas": "^1.4.1",
     "lucide-react": "^0.546.0",
     "motion": "^12.23.24",
     "nanoid": "^5.1.6",
