--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "immer": "^10.1.1",
     "jspdf": "^3.0.4",
     "lucide-react": "^0.546.0",
+    "markdown-it": "^14.1.0",
     "motion": "^12.23.24",
     "nanoid": "^5.1.6",
     "next-themes": "^0.4.6",
@@ -81,6 +82,7 @@
     "@eslint/js": "^9.25.0",
     "@tanstack/eslint-plugin-query": "^5.81.2",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^24.0.3",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
